Fix schedule dropdown. Improve content readability max-width.

--- a/src/pages/content-edit/content-edit.css
+++ b/src/pages/content-edit/content-edit.css
@@ -26,7 +26,7 @@
 }
 
 .contentsContainer {
-    composes: contentWidth from layout_css;
+    composes: textContentWidth from layout_css;
     composes: padding from layout_css;
 }
 
